tests/good/tests/bad/testSyntaxExplicitMissingEquals.grc
// Error: Expected = after type spec
a: int(5)
b: string := "wrong token"
